ComputerHarware/css/style.css
body {
    line-height: 1.6;
    margin: 10px;
}

section {
    margin-top: 10px;
}

h1 {
    font-size: 24px;
    margin-bottom: 20px;
}

h2 {
    font-size: 20px;
    margin-bottom: 15px;
}

h3 {
    margin-top: 50px;
    font-size: 20px;
    margin-bottom: 15px;
}

p {
    font-size: 16px;
}

ul {
    margin-bottom: 5px;
}

html,
body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
}

.full-screen {
    position: fixed;
    height: 100%;
    width: 100%;
    padding: 20px;
    overflow: hidden;
}

.h-100 {
    height: 100% !important;
    min-height: 100% !important;
}

.nav-link {
    color: black;
}

.nav-link:hover {
    color: white;
    background-color: #77d7aa !important;
    cursor: pointer;
}

.nav-link.active {
    color: black !important;
    background-color: #77d7aa !important;
}

.nav-link.disabled {
    color: white !important;
    background-color: darkgray !important;
}

.learnsection {
    display: none;
}

.learnsection.active {
    display: block;
}

.controls {
    padding: 10px 0;
}

.select {
    width: auto;
    padding: 5px;
    margin-left: 15px;
}

.select:hover {
    cursor: pointer;
}

.check-input:hover {
    cursor: pointer;
}

.progress {
    height: 40px;
    padding: 0;
}

.progress-bar {
    background-color: #77d7aa !important;
    color: black;
}

.align-right {
    text-align: right;
}

.learn {
    display: flex;
}

.learn.hide {
    display: none;
}

.quiz {
    display: flex;
}

.quiz.hide {
    display: none;
}


label.box {
    display: flex;
    margin-top: 10px;
    padding: 10px 12px;
    border-radius: 5px;
    cursor: pointer;
    border: 1px solid #ddd;
}

#q1-1:checked~label.q1-1,
#q1-2:checked~label.q1-2,
#q1-3:checked~label.q1-3,
#q1-4:checked~label.q1-4,
#q2-1:checked~label.q2-1,
#q2-2:checked~label.q2-2,
#q2-3:checked~label.q2-3,
#q2-4:checked~label.q2-4,
#q3-1:checked~label.q3-1,
#q3-2:checked~label.q3-2,
#q3-3:checked~label.q3-3,
#q3-4:checked~label.q3-4,
#q4-1:checked~label.q4-1,
#q4-2:checked~label.q4-2,
#q4-3:checked~label.q4-3,
#q4-4:checked~label.q4-4,
#q5-1:checked~label.q5-1,
#q5-2:checked~label.q5-2,
#q5-3:checked~label.q5-3,
#q5-4:checked~label.q5-4 {
    border-color: #dabbfa;
}

.answer:checked~label.right {
    border-color: #77d7aa !important;
}

.answer:checked~label.wrong {
    border-color: #ff6161 !important;
}


#q1-1:checked~label.q1-1 .circle,
#q1-2:checked~label.q1-2 .circle,
#q1-3:checked~label.q1-3 .circle,
#q1-4:checked~label.q1-4 .circle,
#q2-1:checked~label.q2-1 .circle,
#q2-2:checked~label.q2-2 .circle,
#q2-3:checked~label.q2-3 .circle,
#q2-4:checked~label.q2-4 .circle,
#q3-1:checked~label.q3-1 .circle,
#q3-2:checked~label.q3-2 .circle,
#q3-3:checked~label.q3-3 .circle,
#q3-4:checked~label.q3-4 .circle,
#q4-1:checked~label.q4-1 .circle,
#q4-2:checked~label.q4-2 .circle,
#q4-3:checked~label.q4-3 .circle,
#q4-4:checked~label.q4-4 .circle,
#q5-1:checked~label.q5-1 .circle,
#q5-2:checked~label.q5-2 .circle,
#q5-3:checked~label.q5-3 .circle,
#q5-4:checked~label.q5-4 .circle {
    border: 6px solid #dabbfa;
    background-color: #fff;
}

.answer:checked~label.right .circle {
    border: 6px solid #77d7aa !important;
}

.answer:checked~label.wrong .circle {
    border: 6px solid #ff6161 !important;
}

label.box:hover {
    background: #dabbfa;
}

label.box .course {
    display: flex;
    align-items: center;
    width: 100%;
}

label.box .circle {
    height: 22px;
    width: 22px;
    border-radius: 50%;
    margin-right: 15px;
    border: 2px solid #ddd;
    display: inline-block;
}

input[type="radio"] {
    display: none;
}

.submit {
    margin-top: 25px;
}

.questions {
    display: none;
}

.questions.active {
    display: block;
}

